--- a/index.html
+++ b/index.html
@@ -87,6 +87,15 @@
     </section>
   </main>
 
+  <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
+  <script>
+    window.TrackJS && TrackJS.install({ 
+      token: "5e3e7c9042aa4cca90121dd73d70d5cd"
+      // for more configuration options, see https://docs.trackjs.com
+    });
+  </script>
+                        
+
   <script>
     let form = document.querySelector('form');
     form.addEventListener('submit', e => {
@@ -100,8 +109,90 @@
 
     let errorBtns = Array.from(document.querySelectorAll('#error-btns > button'));
 
-    // Start your code here
-    // You may move this JS to another file if you wish
+       // Start your code here
+    errorBtns.forEach(button => {
+      button.addEventListener('click', () => {
+        switch (button.textContent) {
+          case 'Console Log':
+            console.log('Console Log Demo');
+            break;
+          case 'Console Error':
+            console.error('Console Error Demo');
+            break;
+          case 'Console Count':
+            console.count('Count Button');
+            break;
+          case 'Console Warn':
+            console.warn('Count Warn Button');
+            break;
+          case 'Console Assert':
+            console.assert(false, 'This is an assertion error message.');
+            break;
+          case 'Console Clear':
+            console.clear();
+            break;
+          case 'Console Dir':
+            console.dir(document.body);
+            break;
+          case 'Console dirxml':
+            console.dirxml(document);
+            break;
+          case 'Console Group Start':
+            console.group('Group Label');
+            console.log('Group Start');
+            break;
+          case 'Console Group End':
+            console.groupEnd();
+            console.log('Group End');
+            break;
+          case 'Console Table':
+            console.table([{name: 'Software Engineering', num: 110}, {name: 'Programming Languages', num: 130}, {name: 'Advanced Software Engineering', num: 112}]);
+            break;
+          case 'Start Timer':
+            console.time('Timer Button');
+            break;
+          case 'End Timer':
+            console.timeEnd('Timer Button');
+            break;
+          case 'Console Trace':
+            console.trace('Trace message');
+            break;
+          case 'Trigger a Global Error':
+            // Triggering an error
+            undefinedFunction();
+            break;
+        }
+      });
+    });
+
+    // Step 3 - Try/Catch/Finally Implementation
+    class CustomError extends Error {
+      constructor(message) {
+        super(message);
+        this.name = 'CustomError';
+      }
+    }
+
+    form.addEventListener('submit', e => {
+      e.preventDefault();
+      let output = document.querySelector('output');
+      let firstNum = document.querySelector('#first-num').value;
+      let secondNum = document.querySelector('#second-num').value;
+      let operator = document.querySelector('#operator').value;
+      
+      try {
+        if (secondNum == 0 && operator == '/') {
+          throw new CustomError('Division by zero is not allowed');
+        }
+        let result = eval(`${firstNum} ${operator} ${secondNum}`);
+        output.innerHTML = result;
+      } catch (error) {
+        console.error('Error occurred:', error.message);
+        output.innerHTML = `Error: ${error.message}`;
+      } finally {
+        console.log('Calculation attempted');
+      }
+    });
   </script>
 </body>
 
